Added a link to the picture

--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
 </p>
 
 <h3>Image of Myself in Classic Work Attire (For Reference)</h3>
-<img src="businessman.jpg" alt="Image of Me (image can also be found at\
- https://pixabay.com/en/businessman-tie-shirt-career-1454287/)">
+<img src="businessman.jpg" alt="Image of Me"
+
+<p></p>
+<h6>Link to image: <a \
+href="https://pixabay.com/en/businessman-tie-shirt-career-1454287/" \
+target="_blank">Pixabay Image</a></h6>
